# pspaQR_public

./: CMakeLists.txt  Makefile  Makefile.conf  README.md  evidence1.txt  install.sh  install_deps.sh  pspaQR.cpp  right.txt  spaQR_enw  spaQR_new  wrong.txt
Makefile-confs/: Makefile-mac
cmake/: FindBLAS.cmake  FindInit.cmake  FindLAPACK.cmake  FindLAPACKE.cmake  FindMetis.cmake  PrintFindStatus.cmake
include/: cluster.h  edge.h  is.h  operations.h  profile.h  ptree.h  spaQR.hpp  tree.h  util.h
pbatch/: driver.sh  run.sh
src/: CMakeLists.txt  cluster.cpp  edge.cpp  is.cpp  operations.cpp  partition.cpp  profile.cpp  ptree.cpp  tree.cpp  util.cpp
tests/: CMakeLists.txt  Makefile  test_pspaQR.cpp
